samples/_failures_safe/1761149266_7af07a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_33067e87.c: In function ‘main’:
./samples/SAFE/__tmp_33067e87.c:159:16: error: missing terminating " character
  159 |         printf("\n
      |                ^~~
./samples/SAFE/__tmp_33067e87.c:159:9: error: expected expression at end of input
  159 |         printf("\n
      |         ^~~~~~
./samples/SAFE/__tmp_33067e87.c:159:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_33067e87.c:159:9: error: expected declaration or statement at end of input
